--- a/activities.html
+++ b/activities.html
@@ -33,12 +33,30 @@
             </div>
         </nav>
     </header>
-    
+
     <h1>Local Activities</h1>
 
     <select id="categoriesSelect" name="categoriesSelect">
 
+
     </select>
+
+    <table id="" activitiesTable>
+        <thread>
+            <th>Category</th>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Location</th>
+            <th>Price</th>
+
+        </thread>
+        <tbody id="activitiesTableBody">
+
+        </tbody>
+
+
+    </table>
 
     <!-- Include Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
